--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Nicks Portfolio</h1>
     I am 52 years old
+    <br/>
     I live in Evesham
+    <br>
+    I have two kids
     
 </body>
 </html>
